dataset1235/2025-2/805158916/users/3563627350/executions/2118643220_2332513434.log
== SUBMISSION (2025-09-01 14:58:43)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversao * 0,7)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 0.0 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:59:54)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversao, 2)
-- EXECUTION TIME: 
0.0125
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:50:04)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:17:07)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = reais * 0,70
print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:04)
-- CODE: 
coroa = int(input("Quantidade em coroa: "))
conversao = coroa * 0.70

print(round(conversao, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print(round(conversao, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 4
    print(round(conversao, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print(round(conversao, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 4
    print(round(conversao, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    print(round(conversao, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 4
    print(round(conversao, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 4
    print(round(conversao, 2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:28:03)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = (coroa * 0,70)
print(conversao )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:51:44)
-- CODE: 
coroa = int(input("Quantidade de coroa dinamarquesa: "))
conversao = coroadinamarquesa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:46:37)
-- CODE: 
coroa = int(input("Quantidade em coroa "))
conversao = coroa * 0.70

print(round(conversao, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade em coroa 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade em coroa 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade em coroa 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade em coroa 4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade em coroa 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:59:58)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversao, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6 2
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8 2
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6 2
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5 2
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1 2
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999 2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:01:06)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversão = coroa * 0.7

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:49:31)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:55:38)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7
print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:48:32)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0,70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: (0, 70)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:17:46)
-- CODE: 
reais = int(input("Digite o valor: "))
conversao = reais * 0,70
print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:36)
-- CODE: 
coroa = int(input("Quantidade em coroa: "))
conversao = coroa * 0.70

print(round(conversao, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade em coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade em coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade em coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade em coroa: 4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade em coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:04:46)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:07:42)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = reais * 0,70
print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = reais * 0,70
                ^^^^^
NameError: name 'reais' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:07:14)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70
print(conversao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:52:02)
-- CODE: 
coroa = int(input("Quantidade de coroa dinamarquesa: "))
conversao = coroa_dinamarquesa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroa_dinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^^
NameError: name 'coroa_dinamarquesa' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroa_dinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^^
NameError: name 'coroa_dinamarquesa' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroa_dinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^^
NameError: name 'coroa_dinamarquesa' is not defined
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroa_dinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^^
NameError: name 'coroa_dinamarquesa' is not defined
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroa_dinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^^
NameError: name 'coroa_dinamarquesa' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroa_dinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^^
NameError: name 'coroa_dinamarquesa' is not defined
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroa_dinamarquesa * 0.70
                ^^^^^^^^^^^^^^^^^^
NameError: name 'coroa_dinamarquesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:50:16)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:46:42)
-- CODE: 
coroa = int(input("Quantidade em coroa "))
conversao = coroa * 0.70

print(round(conversao, 2))
-- EXECUTION TIME: 
0.0125
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade em coroa 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade em coroa 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade em coroa 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade em coroa 4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade em coroa 6.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:52:45)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3
-- GRADE:
75%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:04:42)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:47:36)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0,70
print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: (0, 70)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:33:13)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70
print (conversao(round, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (conversao(round, 2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (conversao(round, 2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (conversao(round, 2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (conversao(round, 2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (conversao(round, 2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (conversao(round, 2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (conversao(round, 2))
           ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:49:08)
-- CODE: 
coroa = (int(input("Digite o valor: "))
conversao = coroa * 0,70

print(conversao
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroa = (int(input("Digite o valor: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 1
    coroa = (int(input("Digite o valor: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 1
    coroa = (int(input("Digite o valor: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 1
    coroa = (int(input("Digite o valor: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 1
    coroa = (int(input("Digite o valor: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 1
    coroa = (int(input("Digite o valor: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 1
    coroa = (int(input("Digite o valor: "))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:48:59)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70

print(conversao
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print(conversao
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 4
    print(conversao
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print(conversao
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 4
    print(conversao
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    print(conversao
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 4
    print(conversao
         ^
SyntaxError: '(' was never closed
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 4
    print(conversao
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:51:21)
-- CODE: 
coroa = int(input("Quantidade de coroa dinamarquesa: "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa dinamarquesa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa dinamarquesa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa dinamarquesa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa dinamarquesa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa dinamarquesa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa dinamarquesa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa dinamarquesa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:22:26)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70
print(conversao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:00:49)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversão)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(conversão)
          ^^^^^^^^^
NameError: name 'conversão' is not defined. Did you mean: 'conversao'?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(conversão)
          ^^^^^^^^^
NameError: name 'conversão' is not defined. Did you mean: 'conversao'?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(conversão)
          ^^^^^^^^^
NameError: name 'conversão' is not defined. Did you mean: 'conversao'?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(conversão)
          ^^^^^^^^^
NameError: name 'conversão' is not defined. Did you mean: 'conversao'?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(conversão)
          ^^^^^^^^^
NameError: name 'conversão' is not defined. Did you mean: 'conversao'?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(conversão)
          ^^^^^^^^^
NameError: name 'conversão' is not defined. Did you mean: 'conversao'?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(conversão)
          ^^^^^^^^^
NameError: name 'conversão' is not defined. Did you mean: 'conversao'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:50:41)
-- CODE: 
coroa = int(input("Digite o valor "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:49:43)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70

print conversao
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print conversao
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 4
    print conversao
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print conversao
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 4
    print conversao
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    print conversao
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 4
    print conversao
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 4
    print conversao
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:22:28)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70
print(conversao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:22:22)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70
print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:05:57)
-- CODE: 
coroa = int(input("Digite o valor"))
conversao = coroa * 0,70
print(conversao(round, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(conversao(round, 2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(conversao(round, 2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(conversao(round, 2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(conversao(round, 2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(conversao(round, 2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(conversao(round, 2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(conversao(round, 2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: 'tuple' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:59:22)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroadinamarquesa * 0.7

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.7
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.7
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.7
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.7
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.7
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.7
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    conversao = coroadinamarquesa * 0.7
                ^^^^^^^^^^^^^^^^^
NameError: name 'coroadinamarquesa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:08:10)
-- CODE: 
coroa = int(input("Digite o valor: "))
conversao = coroa * 0,70
print(conversao)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Digite o valor: (0, 70)
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Digite o valor: (0, 70)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:03:30)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversao(round, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print(conversao(round, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 4
    print(conversao(round, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 4
    print(conversao(round, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 4
    print(conversao(round, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 4
    print(conversao(round, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 4
    print(conversao(round, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 4
    print(conversao(round, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:58:36)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversao * 0,7)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 0.0 7
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 0.0 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:58:05)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:49)
-- CODE: 
coroa = int(input("Quantidade em coroa "))
conversao = coroa * 0.70

print(round(conversao, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade em coroa 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade em coroa 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade em coroa 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade em coroa 4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade em coroa 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:53:12)
-- CODE: 
coroa = int(input("Quantidade de coroa: "))
conversao = coroa * 0.7

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade de coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade de coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade de coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade de coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade de coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade de coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:15:37)
-- CODE: 
coroa = int(input("Quantidade em coroa: "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade em coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade em coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade em coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade em coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade em coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:43:02)
-- CODE: 
coroa = int(input("Quantidade em coroa: "))
conversao = coroa * 0.70

print(conversao)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa: 5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
Quantidade em coroa: 2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
Quantidade em coroa: 5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
Quantidade em coroa: 10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
Quantidade em coroa: 9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
Quantidade em coroa: 4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
Quantidade em coroa: 6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
